			       =================
				BOGOFILTER NEWS
			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-12-7

	* Add '-O' option to direct bogoutil output to a file.
	* Fix building of binary rpms with SQLite support.

	2005-12-26

	* Split NEWS file into files NEWS and NEWS.0 for new (version
	  1.0 and after) and old (version 0.x.y) info

	2005-12-25

	* Capitalize variables in bogofilter.spec.in to please RH9's
          RPM 4.2 implementation.

	2005-12-22
	
	* Remove incorrect info from integrating-with-postfix.
	  (Thanks to Tom Allison)

	2005-12-18
	
	* Fix bad return code in db_loop() in datastore_sqlite.c
	  (reported by Sami Farin).

	2005-12-17
	
	* XML documentation cleanups (thanks to Nicholas Kaiser)

	2005-12-06

	* bogofilter.cf.example was updated to reflect the proper default of
	  db_log_autoremove=yes. It previously claimed the default were "off".

1.0.0	2005-11-30

	Release history prior to 1.0.0 is in file NEWS.0
